--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div>
-<h1 style="display: flex; justify-content: center; font-weight: 500;">Invest in everything </h1>
+<h1 style="display: flex; justify-content: center; font-weight: 500;">Invest in everything!</h1>
 <h2 style="display: flex; justify-content: center; font-weight: 200;">Online platform to invest in stocks, derivatives, mutual funds, and more</h2>
 </div>
 
